tests/undefined/undefined.exp
Error ------------------------------------------------------------------------------------------------- undefined.js:3:5

Cannot call `x.foo` because property `foo` is missing in uninitialized variable [1].

   undefined.js:3:5
   3|     x.foo();
          ^^^^^^^

References:
   undefined.js:2:9
   2|     var x;
              ^ [1]


Error ------------------------------------------------------------------------------------------------ undefined2.js:7:6

Cannot cast `name` to boolean because:
 - string [1] is incompatible with boolean [2].
 - undefined [3] is incompatible with boolean [2].

   undefined2.js:7:6
   7|     (name: boolean); // error, string or void
           ^^^^

References:
   undefined2.js:6:21
   6|     var name = id ? 'John' : undefined;
                          ^^^^^^ [1]
   undefined2.js:7:12
   7|     (name: boolean); // error, string or void
                 ^^^^^^^ [2]
   undefined2.js:6:30
   6|     var name = id ? 'John' : undefined;
                                   ^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- undefined2.js:13:6

Cannot cast `bar[x]` to boolean because:
 - undefined [1] is incompatible with boolean [2].
 - string [3] is incompatible with boolean [2].

   undefined2.js:13:6
   13|     (bar[x]: boolean); // error, string or void
            ^^^^^^

References:
   undefined2.js:10:7
   10|       undefined,
             ^^^^^^^^^ [1]
   undefined2.js:13:14
   13|     (bar[x]: boolean); // error, string or void
                    ^^^^^^^ [2]
   undefined2.js:11:7
   11|       'bar',
             ^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- undefined2.js:22:7

Cannot get `x[0]` because an index signature declaring the expected key / value type is missing in `Number` [1].

   undefined2.js:22:7
   22|       x[0]; // should error, could be void
             ^^^^

References:
   undefined2.js:16:15
   16|   function(x: number) {
                     ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- undefined2.js:29:6

Cannot cast `bar[x]` to boolean because:
 - string [1] is incompatible with boolean [2].
 - string [3] is incompatible with boolean [2].

   undefined2.js:29:6
   29|     (bar[x]: boolean); // error, string only
            ^^^^^^

References:
   undefined2.js:26:7
   26|       undefined,
             ^^^^^^^^^ [1]
   undefined2.js:29:14
   29|     (bar[x]: boolean); // error, string only
                    ^^^^^^^ [2]
   undefined2.js:27:7
   27|       'bar',
             ^^^^^ [3]



Found 8 errors
